fix footer so it never overlaps other items

--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,8 +1,4 @@
 footer {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: auto;
     color: #5e5e5e;
     background-color: #f5f7fa;
 }
